--- a/.config
+++ b/.config
@@ -50,7 +50,9 @@ CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libyaml=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
 # CONFIG_PACKAGE_luci-app-ddns is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
 CONFIG_PACKAGE_luci-app-flowoffload=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openclash=y
@@ -89,3 +91,4 @@ CONFIG_PACKAGE_ruby-yaml=y
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 # CONFIG_UnblockNeteaseMusic_Go is not set
 # CONFIG_UnblockNeteaseMusic_NodeJS is not set
+CONFIG_PACKAGE_luci-lib-fs=y
