--- a/.config
+++ b/.config
@@ -2,6 +2,7 @@ CONFIG_TARGET_rockchip=y
 CONFIG_TARGET_rockchip_armv8=y
 CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2s=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IPV6 is not set
+# CONFIG_FEED_helloworld is not set
 # CONFIG_IPV6 is not set
 # CONFIG_KERNEL_IPV6 is not set
 CONFIG_LIBCURL_COOKIES=y
@@ -15,19 +16,22 @@ CONFIG_LIBCURL_PROXY=y
 # CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
 CONFIG_PACKAGE_adbyby=y
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_boost=y
+CONFIG_PACKAGE_boost-date_time=y
+CONFIG_PACKAGE_boost-program_options=y
+CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_etherwake is not set
+CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-extra=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
+CONFIG_PACKAGE_kcptun-client=y
 # CONFIG_PACKAGE_kmod-fast-classifier is not set
 CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
-CONFIG_PACKAGE_kmod-ipt-tproxy=y
 # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
 CONFIG_PACKAGE_kmod-nf-flow=y
+# CONFIG_PACKAGE_kmod-nf-ipt6 is not set
 # CONFIG_PACKAGE_kmod-shortcut-fe is not set
 # CONFIG_PACKAGE_kmod-tun is not set
 # CONFIG_PACKAGE_libatomic is not set
@@ -40,13 +44,11 @@ CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libgmp=y
 # CONFIG_PACKAGE_libhttp-parser is not set
 # CONFIG_PACKAGE_libip6tc is not set
-CONFIG_PACKAGE_libmbedtls=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 # CONFIG_PACKAGE_libnghttp2 is not set
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libruby=y
-# CONFIG_PACKAGE_libstdcpp is not set
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libyaml=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
@@ -62,6 +64,9 @@ CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 # CONFIG_PACKAGE_luci-app-sfe is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
@@ -87,6 +92,8 @@ CONFIG_PACKAGE_ruby-psych=y
 CONFIG_PACKAGE_ruby-stringio=y
 CONFIG_PACKAGE_ruby-strscan=y
 CONFIG_PACKAGE_ruby-yaml=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_wol is not set
@@ -94,3 +101,7 @@ CONFIG_PACKAGE_ruby-yaml=y
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 # CONFIG_UnblockNeteaseMusic_Go is not set
 # CONFIG_UnblockNeteaseMusic_NodeJS is not set
+CONFIG_boost-compile-visibility-hidden=y
+CONFIG_boost-runtime-shared=y
+CONFIG_boost-static-and-shared-libs=y
+CONFIG_boost-variant-release=y
