--- a/.config
+++ b/.config
@@ -35,20 +35,22 @@ CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 # CONFIG_PACKAGE_kmod-shortcut-fe is not set
-# CONFIG_PACKAGE_libatomic is not set
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 # CONFIG_PACKAGE_libcares is not set
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libgmp=y
 # CONFIG_PACKAGE_libhttp-parser is not set
 # CONFIG_PACKAGE_libip6tc is not set
 CONFIG_PACKAGE_libnftnl=y
 # CONFIG_PACKAGE_libnghttp2 is not set
+CONFIG_PACKAGE_libnss=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libruby=y
+CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libyaml=y
@@ -65,7 +67,9 @@ CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 # CONFIG_PACKAGE_luci-app-sfe is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
@@ -79,11 +83,14 @@ CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nft-qos-zh-cn=y
 # CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_nft-qos=y
 CONFIG_PACKAGE_nftables-nojson=y
 # CONFIG_PACKAGE_nlbwmon is not set
 # CONFIG_PACKAGE_node is not set
+CONFIG_PACKAGE_nspr=y
+CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_ruby=y
 CONFIG_PACKAGE_ruby-bigdecimal=y
 CONFIG_PACKAGE_ruby-date=y
@@ -100,6 +107,12 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 # CONFIG_UnblockNeteaseMusic_Go is not set
 # CONFIG_UnblockNeteaseMusic_NodeJS is not set
@@ -111,7 +124,6 @@ CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
-CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_wol=y
 CONFIG_PACKAGE_zerotier=y
 # CONFIG_ZEROTIER_ENABLE_DEBUG is not set
